--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     min-height: 100vh;
     font-family: Roboto, sans-serif;
+    transform: scale(75%);
 }
 
 .header-hero-wrapper {
