--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ body {
     display: flex;
     justify-content: center;
     margin: 100px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 400px;
+    margin-right: 400px;
 }
 .hero-image{
     height:300px;
@@ -64,7 +64,6 @@ h1 {
 
 .hero-text {
     color: #E5E7EB;
-    font-size: 1.6rem;
 }
 
 .sign-up-button {
@@ -116,12 +115,12 @@ h2 {
     display: flex;
     flex-direction: column;
     margin: 100px;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 400px;
+    padding-right: 400px;
 }
 
 .quote-text {
-    font-size: 2.4rem;
+    font-size: 36px;
     font-weight: 300;
     font-style: italic;
     color: #1F2937;
