--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    min-height: 100vh;
+    min-height: 100%;
     font-family: Roboto, sans-serif;
 }
 
@@ -41,7 +41,8 @@ body {
 .hero {
     display: flex;
     justify-content: center;
-    margin: 100px;
+    margin: 10% 10%;
+    max-width: 1200px;
     margin-left: 400px;
     margin-right: 400px;
 }
